Revert "Fix distance slider handle drop shadow clipping on left side"
This reverts commit b491e306336f8fdf29963e0cab1be6748a2db1d9.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -382,7 +382,7 @@
       flex-direction: column;
       gap: 12px;
       border-radius: var(--shape-xs);
-      padding: 12px 12px 3px;
+      padding: 12px 0 3px;
       border: none;
       flex: 0 0 100%;
     }
